--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
     add-mappings: true
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/beetlsql?useunicode=true&useSSL=false&characterEncoding=utf8
-    username: root
-    password: root
+    url: jdbc:mysql://192.168.2.60:3306/beetlsql?useunicode=true&useSSL=false&characterEncoding=utf8
+    username: db_xwcz
+    password: db_xwcz
     ## 配置使用详情：https://github.com/alibaba/druid/tree/master/druid-spring-boot-starter
     druid:
       enable: true
