--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@ kind: pipeline
 name: default
 
 steps:
-  - name: dingtalk
+  - name: send-dingtalk
     image: lddsb/drone-dingtalk-message
     settings:
       token: 6bd0b785910eb2d6bc634075ca14dda407162e4598008d214f7dcd3397203bbe
