--- a/.drone.yml
+++ b/.drone.yml
@@ -3,8 +3,9 @@ name: go-to-build
 
 steps:
   - name: maven-build
-    image: java:openjdk-8-alpine
+    image: maven:3.6.0-jdk-8-alpine
     commands:
+      - mvn -version
       - mvn clean package -U
   - name: docker
     image: plugins/docker
