--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
     image: maven:3.6.0-jdk-8-alpine
     commands:
       - mvn -version
-      - mvn clean pcakage -U
+      - mvn clean package -U
   - name: docker
     image: plugins/docker
     settings:
